/*
 * $Id: ChangeLog,v 1.2919 2004/05/11 01:22:37 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-11 14:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/ctmisc.prg
    ! Fixed CENTER() to accept NIL value as the first parameter.

2004-05-11 03:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/bsd/gcc.cf
    - removed copy of config/rules.cf - I don't know why it was there
      (if I committed it then sorry - it was done by mistake)

  * xharbour/config/darwin/gcc.cf
    * some minor cleanups

  * xharbour/source/compiler/harbour.c
  * xharbour/source/compiler/harbour.sly
  * xharbour/source/vm/fm.c
  * xharbour/source/vm/hvm.c
  * xharbour/utils/hbpp/hbpp.c
    * do not use malloc.h as far as is not strictly necessary by some
      old compilers - malloc.h has been obsoleted by stdlib.h - in such
      case add malloc.h to hbdefs.h only or this compiler
      Some contrib files should be cleaned too.

2004-05-11 04:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    ! minor correction on function __TRACEPRGCALLS for MT compilation.

2004-05-11 08:40 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/gtwin/mousewin.c
    - HB_GT_FUNC(mouse_IsButtonPressed( int iButton ) - copy code from gtwvt.c
      Fixes MLEFTDOWN() & MRIGHTDOWN()

2004-05-10 12:20 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/dbedit.prg
    ! Fixed empty column behavior in parameters (Clipper compat)

2004-05-10 16:39 UTC+0200 Mindaugas Kavaliauskas <dbtopas/at/dbtopas.lt>
  * source/vm/macro.c
    * Argument is passed to error block in case of argument or syntax error


2004-05-10 15:26 UTC+0200 Giancarlo Niccolai <antispam [at] niccolai/dot/ ws>
  * source/rtl/console.c
    ! print files and print pipes must be sent the command sequence CRLF